--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "@tauri-apps/api": "^2.8.0",
-    "@tauri-apps/plugin-opener": "^2.5.0"
+    "@tauri-apps/plugin-global-shortcut": "~2",
+    "@tauri-apps/plugin-opener": "^2.5.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
