--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bunx --bun vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.8.0",
@@ -19,11 +20,14 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2.8.2",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
+    "jsdom": "^27.0.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.3",
-    "@tauri-apps/cli": "^2.8.2"
+    "vitest": "^3.2.4"
   }
 }
