--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.3.4",
+    "@codemirror/language-data": "^6.5.1",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-autostart": "~2",
     "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "@tauri-apps/plugin-store": "^2.4.0",
+    "@uiw/react-codemirror": "^4.25.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
