--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@tauri-apps/cli": "^2.8.2",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-v8": "3.2.4",
+    "happy-dom": "^19.0.2",
     "jsdom": "^27.0.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.3",
